# ChangeLog for dev-util/netbeans
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/netbeans/ChangeLog,v 1.128 2009/12/04 20:38:49 fordfrog Exp $

*netbeans-6.8_rc2 (04 Dec 2009)

  04 Dec 2009; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.8_rc1.ebuild, +netbeans-6.8_rc2.ebuild:
  Version bump

*netbeans-6.8_rc1 (28 Nov 2009)

  28 Nov 2009; Miroslav Šulc <fordfrog@gentoo.org>
  -files/5.5-r2/jdbcstorage-build.xml-comments.patch,
  -files/5.5-r2/jspparser-build.xml.patch,
  -files/5.5-r2/mdrant-build.xml-comments.patch,
  -files/5.5-r2/startscript.sh,
  files/6.8/nbbuild_templates_projectized.xml.patch,
  -netbeans-6.8_beta-r1.ebuild, +netbeans-6.8_rc1.ebuild:
  Version bump, also removed old unused files

*netbeans-6.8_beta-r1 (25 Oct 2009)

  25 Oct 2009; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.8_beta.ebuild, +netbeans-6.8_beta-r1.ebuild:
  Fixed issue https://bugs.gentoo.org/show_bug.cgi?id=290468

*netbeans-6.8_beta (24 Oct 2009)

  24 Oct 2009; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.8_alpha2.ebuild, +netbeans-6.8_beta.ebuild:
  Version bump

*netbeans-6.8_alpha2 (11 Oct 2009)

  11 Oct 2009; Miroslav Šulc <fordfrog@gentoo.org>
  +files/6.8/nbbuild_build.xml.patch, +netbeans-6.8_alpha2.ebuild,
  +files/6.8/nbbuild_templates_projectized.xml.patch:
  added netbeans 6.8 milestone 2 ebuild. though this ebuild will not be
  stabilized, i decided to put it into main tree because it is pretty stable
  and solves some issues netbeans 6.7* has so it might help netbeans users
  to overcome issues of netbeans 6.7*

*netbeans-6.7.1 (03 Aug 2009)

  03 Aug 2009; Miroslav Šulc <fordfrog@gentoo.org> +netbeans-6.7.1.ebuild:
  Version bump. I did not add JavaFX support as part of the project is
  closed source and it seems it is not possible to build it. Anyway,
  netbeans users can use update center to get JavaFX module.

*netbeans-6.7 (29 Jun 2009)
