@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/netbeans/Attic/netbeans-6.8_rc2.ebuild,v 1.1 2009/12/04 20:38:49 fordfrog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/netbeans/Attic/netbeans-6.8.ebuild,v 1.1 2009/12/10 18:05:08 fordfrog Exp $
 
 EAPI="2"
 WANT_SPLIT_ANT="true"
@@ -10,8 +10,8 @@ DESCRIPTION="NetBeans IDE for Java"
 HOMEPAGE="http://www.netbeans.org"
 
 SLOT="6.8"
-SRC_URI="http://download.netbeans.org/netbeans/6.8/rc/zip/netbeans-6.8rc2-200912022200-src.zip
-	mirror://gentoo/netbeans-6.8-l10n-20091127193013.tar.bz2"
+SRC_URI="http://download.netbeans.org/netbeans/6.8/final/zip/netbeans-6.8-200912041610-src.zip
+	mirror://gentoo/netbeans-6.8-l10n-20091209164706.tar.bz2"
 
 LICENSE="|| ( CDDL GPL-2-with-linking-exception )"
 KEYWORDS="~amd64 ~x86"
@@ -467,8 +467,8 @@ src_prepare () {
 		fi
 
 		if use netbeans_modules_enterprise ; then
-			filter_file "javaee.api/external/javaee-api-6.0-SNAPSHOT.jar" ${tmpfile}
-			filter_file "javaee.api/external/javaee-web-api-6.0-SNAPSHOT.jar" ${tmpfile}
+			filter_file "javaee.api/external/javaee-api-6.0.jar" ${tmpfile}
+			filter_file "javaee.api/external/javaee-web-api-6.0.jar" ${tmpfile}
 			filter_file "javaee.api/external/javax.annotation.jar" ${tmpfile}
 			filter_file "javaee.api/external/jaxb-api-osgi.jar" ${tmpfile}
 			filter_file "javaee.api/external/webservices-api-osgi.jar" ${tmpfile}
