@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/netbeans
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/netbeans/ChangeLog,v 1.128 2009/12/04 20:38:49 fordfrog Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/netbeans/ChangeLog,v 1.129 2009/12/10 18:05:08 fordfrog Exp $
+
+*netbeans-6.8 (10 Dec 2009)
+
+  10 Dec 2009; Miroslav Šulc <fordfrog@gentoo.org>
+  -netbeans-6.8_rc2.ebuild, +netbeans-6.8.ebuild:
+  Version bump
 
 *netbeans-6.8_rc2 (04 Dec 2009)
 
